--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <h1>Оцінка факторів впливу НГДУ на навколишнє середовище </h1>
+<h1>Оцінка факторів впливу НГДУ на навколишнє середовище </h1>
+<h1>Оцінка факторів впливу НГДУ на навколишнє середовище </h1>
+<h1>Оцінка факторів впливу НГДУ на навколишнє середовище </h1>
 <h1> vou vou </h1>
 <form method="post" action="handler.php">
 	<fieldset>
