--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1>Оцінка факторів впливу НГДУ на навколишнє середовище </h1>
-<h1>Оцінка факторів впливу НГДУ на навколишнє середовище </h1>
-<h1>Оцінка факторів впливу НГДУ на навколишнє середовище </h1>
-<h1>Оцінка факторів впливу НГДУ на навколишнє середовище </h1>
+<p><b>Загальні показники:</b></p>
+<p><b>Загальні показники:</b></p>
+<p><b>Загальні показники:</b></p>
 <h1> vou vou </h1>
 <form method="post" action="handler.php">
 	<fieldset>
